# libi8x

./: .gitignore  .travis.yml  Makefile.am  NEWS  README  README.rst  autogen.sh  configure.ac  libi8x.spec.in
examples/: .gitignore  Makefile.am  libthread_db.c  proc_service.h  tlsdump.c
libi8x/: Makefile.am  archspec.h  chunk.c  code.c  context.c  dbg-interp.c  errors.c  funcref-private.h  funcref.c  function.c  inferior-private.h  inferior.c  interp-private.h  interp.c  libi8x-private.h  libi8x-test-private.h  libi8x.h  libi8x.pc.in  libi8x.sym  list.c  note.c  object.c  opcodes.h  optable.c  readbuf.c  reloc-private.h  reloc.c  type.c  validator.c  xctx-private.h  xctx.c
libi8x-test/: Makefile.am  execution-test.h  libi8x-test.c  libi8x-test.h  validation-test.h
python/: .coveragerc  .gdbinit  .gitignore  MANIFEST.in  Makefile.am  NEWS.rst  README.statictest  libi8x.c.in  libi8xtest.py  mkpy3capi.py  setup.cfg  setup.py  statictest.py
python/libi8x/: __init__.py  core.py
python/tests/: README  common.py
python/tests/hi/: __init__.py  common.py  test_api.py  test_context.py  test_exceptions.py  test_funcref.py  test_function.py  test_inferior.py  test_list.py  test_note.py  test_object.py  test_reloc.py  test_xctx.py
python/tests/lo/: common.py  test_all_tested.py  test_bad_argtypes.py  test_constants.py  test_out_of_order_unref.py  test_py8x_chunk_get_encoded.py  test_py8x_chunk_get_encoded_size.py  test_py8x_chunk_get_version.py  test_py8x_ctx_get_funcref.py  test_py8x_ctx_get_functions.py  test_py8x_ctx_get_set_log_fn.py  test_py8x_ctx_get_set_log_priority.py  test_py8x_ctx_import_bytecode.py  test_py8x_ctx_import_native.py  test_py8x_ctx_new.py  test_py8x_ctx_set_log_fn.py  test_py8x_ctx_set_object_factory.py  test_py8x_ctx_unregister_func.py  test_py8x_encapsulate.py  test_py8x_func_get_funcref.py  test_py8x_func_get_note.py  test_py8x_func_get_relocs.py  test_py8x_funcref_get_fullname.py  test_py8x_funcref_is_resolved.py  test_py8x_inf_new.py  test_py8x_inf_set_read_mem_fn.py  test_py8x_inf_set_relocate_fn.py  test_py8x_list_get_first.py  test_py8x_list_get_next.py  test_py8x_listitem_get_object.py  test_py8x_log.py  test_py8x_natfunc_impl.py  test_py8x_note_get_unique_chunk.py  test_py8x_ob_is.py  test_py8x_read_mem_fn.py  test_py8x_reloc_get_src_offset.py  test_py8x_relocate_fn.py  test_py8x_set_exception.py  test_py8x_xctx_call.py  test_py8x_xctx_get_set_use_debug_interpreter.py  (+1 more)
src/: .gitignore  Makefile.am  chunk.c  code.c  context.c  dbg-interp.c  extern-private.h  external.c  funcref-private.h  funcref.c  funcsig.c  function.c  inferior-private.h  inferior.c  interp-private.h  interp.c  libabc-private.h  libabc.c  libi8x-private.h  libi8x.c  libi8x.h  libi8x.pc.in  libi8x.sym  list.c  note.c  object.c  opcodes.h  optable.c  readbuf.c  symref-private.h  symref.c  test-libi8x.c  type.c  util.c  validator.c  xctx-private.h
src/abc/: libabc.h
src/i8x/: libi8x.h
tests/: .gitignore  Makefile.am  __init__.py  ifact.S  ifact.i8  main.c  python-tests.in  rfact.S  rfact.i8
tests/api/: test_all_tested.py
tests/bugs/: .gitignore  test-bug-0001.c  test-bug-0002.c  test-bug-0003.c
tests/corpus/: Makefile.am
tests/corpus/glibc/0.00-1f+1/: README
tests/corpus/glibc/0.00-1f+1/i686/: 0001-0001  0001-0002  0001-0003  0001-0004  0001-0005  0001-0006
tests/corpus/glibc/0.00-1f+1/ppc64/: 0001-0001  0001-0002  0001-0003  0001-0004  0001-0006
tests/corpus/glibc/0.00-1f+1/s390x/: 0001-0002  0001-0003  0001-0004  0001-0005
tests/corpus/glibc/0.00-1f+1/x86_64/: 0001-0002  0001-0003  0001-0004  0001-0005  0001-0006
tests/corpus/glibc/0.00-2w/: README
tests/corpus/glibc/0.00-2w/aarch64/: 0001-0001  0001-0002  0001-0003  0001-0004  0001-0005  0001-0006  0001-0007  0001-0008  0002-0001  0002-0002  0002-0003  0002-0004
tests/corpus/glibc/0.00-2w/i686/: 0001-0002  0001-0003  0001-0004  0001-0005  0001-0006  0001-0007  0001-0008  0002-0001  0002-0002  0002-0003  0002-0004
tests/corpus/glibc/0.00-2w/ppc64/: 0001-0002  0001-0003  0001-0004  0001-0005  0001-0007  0002-0001  0002-0003  0002-0004
tests/corpus/glibc/0.00-2w/s390x/: 0001-0001  0001-0002  0001-0003  0001-0004  0001-0006  0001-0007  0001-0008  0002-0001  0002-0002  0002-0003  0002-0004
tests/corpus/glibc/0.00-2w/x86_64/: 0001-0001  0001-0002  0001-0003  0001-0004  0001-0007  0002-0001  0002-0003  0002-0004
tests/corpus/glibc/0.00-4b/: README
tests/corpus/glibc/0.00-4b/x86_64/: 0001-0001  0001-0005  0001-0006  0001-0007  0001-0008  0001-0009  0001-0010  0001-0011  0001-0012  0002-0001  0002-0002  0002-0003  0002-0004  0002-0005  0002-0006
tests/corpus/i8c/0.0.2/: README
tests/corpus/i8c/0.0.2/test_binary_ops/test_binary_ops_0001/be/: 0001
tests/corpus/i8c/0.0.2/test_binary_ops/test_binary_ops_0001/el/: 0001
tests/corpus/i8c/0.0.2/test_binary_ops/test_binary_ops_0003/be/: 0001
tests/corpus/i8c/0.0.2/test_binary_ops/test_binary_ops_0003/el/: 0001
tests/corpus/i8c/0.0.2/test_binary_ops/test_binary_ops_0011/be/: 0001
tests/corpus/i8c/0.0.2/test_binary_ops/test_binary_ops_0011/el/: 0001
tests/corpus/i8c/0.0.2/test_binary_ops/test_binary_ops_0026/be/: 0001
tests/corpus/i8c/0.0.2/test_binary_ops/test_binary_ops_0026/el/: 0001
tests/corpus/i8c/0.0.2/test_binary_ops/test_binary_ops_0051/be/: 0001
tests/corpus/i8c/0.0.2/test_binary_ops/test_binary_ops_0051/el/: 0001
tests/corpus/i8c/0.0.2/test_binary_ops/test_binary_ops_0076/be/: 0001
tests/corpus/i8c/0.0.2/test_binary_ops/test_binary_ops_0076/el/: 0001
tests/corpus/i8c/0.0.2/test_binary_ops/test_binary_ops_0101/be/: 0001
tests/corpus/i8c/0.0.2/test_binary_ops/test_binary_ops_0101/el/: 0001
tests/corpus/i8c/0.0.2/test_binary_ops/test_binary_ops_0126/be/: 0001
tests/corpus/i8c/0.0.3/: README
tests/corpus/i8c/0.0.4/: README
tests/examples/: .gitignore  test-libthread_db.c
tests/exec/: .gitignore  test-deref.c  test-factorial.c  test-smoke.c  test_runtime_type_checks.py
tests/exec/ops/: .gitignore  test-deref.c
tests/mgmt/: test_disambiguation.py  test_local_functions.py
tests/valid/: .gitignore  test-corpus.c
(+1323 files in other folders)
